--- a/localisation/BMP_events_l_english.yml
+++ b/localisation/BMP_events_l_english.yml
@@ -55,9 +55,9 @@
  mandate.9.t:0 "A New High Commissioner"
  mandate.9.d:0 "“No High Commissioner in the twenty-five years of British rule in Palestine enjoyed greater popular trust and none repaid it with greater personal kindness.” Writes the Palestine Post in response to the departure of the Viscount Gort. Gort was forced to leave following health complications. Sir Alan Cunningham has been chosen as his replacement."
  mandate.9.a:0 "Cunningham takes power."
- israel.2.t:0 "Calls for War"
- israel.2.d:0 "Western colonial powers have neglected their former Arab subjects. The creation of Israel, a Jewish nation, is not just an insult to the Arabs living in Palestine, but more importantly, a threat. People across our nation are calling for war to liberate our brethren!"
- israel.2.a:0 "We should check our options."
+ bmpisrael.2.t:0 "Calls for War"
+ bmpisrael.2.d:0 "Western colonial powers have neglected their former Arab subjects. The creation of Israel, a Jewish nation, is not just an insult to the Arabs living in Palestine, but more importantly, a threat. People across our nation are calling for war to liberate our brethren!"
+ bmpisrael.2.a:0 "We should check our options."
  news.5000.t:0 "Bombing of the King David Hotel"
  news.5000.d:0 "91 killed and 46 injured after a bomb goes off in the western half of the southern wing of the King David Hotel. The hotel is home to the secretariat of the Mandate government, as well as the headquarters of the British Armed Forces in Palestine and Transjordan. Reports claim that warnings of the bombing were sent, but that no evacuation was ordered. The Jewish paramilitary organization known as the Irgun claims responsibility for the bombing, but blames the British for the deaths in light of their not responding to the warnings. Public opinion in Britain weighs heavily against the Jews in the Mandate. The consequences of the attack have yet to be seen."
  news.5000.a:0 "We live in interesting times."
@@ -97,16 +97,16 @@
  mandate.15.t:0 "End of the Arab Revolt"
  mandate.15.d:0 "The last of the revolting militias have been destroyed, and with them the chaos of the Arab Revolt. Jewish militias now play an increasingly prominent role in the defense of the Mandate, and the Palestine Police Force has learned many new tricks from the fighting."
  mandate.15.a:0 "One less problem to worry about."
- israel.1.t:0 "Formation of the Israeli Defense Force"
- israel.1.d:0 "With the creation of our new nation, an army must also be created with it. Organizations such as the Haganah have long dreamed of defending Israel from foreign threats, and it has become the core of the new Israeli Defense Force. Local militias have also joined the IDF’s ranks. This new defense force will be vital in the struggle against our many enemies."
- israel.1.a:0 "We welcome them!"
- israel.2.t:0 "The State of Israel has been formed"
- israel.2.d:0 "The Arab League calls upon us to aid our brothers in Palestine, who are currently losing their homeland to the Israelites"
- israel.2.a:0 "We must help them!"
- israel.3.t:0 "The Altalena Affair"
- israel.3.d:0 "Our government has worked hard to turn the many paramilitary organizations into the Israeli Defense Force. While the Irgun has resisted our efforts, until now, they have been fighting alongside the IDF. However, after their doomed efforts to use the Altalena to smuggle in French weapons for their fighters, and the uproar caused by the killing of Irgun members by the IDF in a dispute over these weapons, it is clear we can no longer allow a rogue army to function and make deals with foreign powers from within our borders."
- israel.3.a:0 "We should send them an ultimatum, “Join us or be destroyed.”"
- israel.3.b:0 "We cannot allow such a hostile group to join the IDF. We must destroy them now!"
- israel.4.t:0 "The End of the Arab-Israeli war"
- israel.4.d:0 "The Israeli forces have held their ground and peace talks are in effect"
- israel.4.a:0 ""
+ bmpisrael.1.t:0 "Formation of the Israeli Defense Force"
+ bmpisrael.1.d:0 "With the creation of our new nation, an army must also be created with it. Organizations such as the Haganah have long dreamed of defending Israel from foreign threats, and it has become the core of the new Israeli Defense Force. Local militias have also joined the IDF’s ranks. This new defense force will be vital in the struggle against our many enemies."
+ bmpisrael.1.a:0 "We welcome them!"
+ bmpisrael.2.t:0 "The State of Israel has been formed"
+ bmpisrael.2.d:0 "The Arab League calls upon us to aid our brothers in Palestine, who are currently losing their homeland to the Israelites"
+ bmpisrael.2.a:0 "We must help them!"
+ bmpisrael.3.t:0 "The Altalena Affair"
+ bmpisrael.3.d:0 "Our government has worked hard to turn the many paramilitary organizations into the Israeli Defense Force. While the Irgun has resisted our efforts, until now, they have been fighting alongside the IDF. However, after their doomed efforts to use the Altalena to smuggle in French weapons for their fighters, and the uproar caused by the killing of Irgun members by the IDF in a dispute over these weapons, it is clear we can no longer allow a rogue army to function and make deals with foreign powers from within our borders."
+ bmpisrael.3.a:0 "We should send them an ultimatum, “Join us or be destroyed.”"
+ bmpisrael.3.b:0 "We cannot allow such a hostile group to join the IDF. We must destroy them now!"
+ bmpisrael.4.t:0 "The End of the Arab-Israeli war"
+ bmpisrael.4.d:0 "The Israeli forces have held their ground and peace talks are in effect"
+ bmpisrael.4.a:0 ""
