jor tree and fixes
unfunctional jor tree, new unused ISR_fascism flag, new LV-38 gfx for iraq, some loc fixes

--- a/localisation/BMP_countries_l_english.yml
+++ b/localisation/BMP_countries_l_english.yml
@@ -26,5 +26,5 @@
  BMP_monarchism_DEF:0 "The Kingdom of Palestine"
  BMP_monarchism_ADJ:0 "Mandatory Palestinian"
  
- JOR_monarchsim:0 "Emirate of Transjordan"
- JOR_monarchsim_DEF:0 "The Emirate of Transjordan"
+ JOR_monarchism:0 "Emirate of Transjordan"
+ JOR_monarchism_DEF:0 "The Emirate of Transjordan"
