--- a/localisation/BMP_parties_l_english.yml
+++ b/localisation/BMP_parties_l_english.yml
@@ -23,3 +23,8 @@
  JOR_fascism_party_long:0 "Hizb ut-Tahrir"
  JOR_socialism_party:0 "NSP"
  JOR_socialism_party_long:0 "Al-Hizb Al-Watani Al-Ishtiraki"
+ 
+ JOR_monarchism_party:0 "Hashemite Dinasty"
+ 
+ IRQ_fascism_party:0 "NBP"
+ IRQ_monarchism_party:0 "Hashemite Dinasty"
