--- a/localisation/irq_parties_l_english.yml
+++ b/localisation/irq_parties_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
- IRQ_neutrality_party:0 "Hashemite Dynasty"
+ IRQ_monarchism_party:0 "Hashemite Dinasty"
  IRQ_communism_party:0 "AHSI"
  IRQ_communism_party_long:0 "Al-Hizb al-Shiuly al-Iraqiy"
  IRQ_democratic_party:0 "IDC"
