--- a/localisation/BMP_parties_l_english.yml
+++ b/localisation/BMP_parties_l_english.yml
@@ -24,7 +24,7 @@
  JOR_socialism_party:0 "NSP"
  JOR_socialism_party_long:0 "Al-Hizb Al-Watani Al-Ishtiraki"
  
- JOR_monarchism_party:0 "Hashemite Dinasty"
+ JOR_monarchism_party:0 "Hashemite Dynasty"
  
  IRQ_fascism_party:0 "NBP"
- IRQ_monarchism_party:0 "Hashemite Dinasty"
+ IRQ_monarchism_party:0 "Hashemite Dynasty"
