--- a/localisation/irq_parties_l_english.yml
+++ b/localisation/irq_parties_l_english.yml
@@ -3,6 +3,8 @@
  IRQ_communism_party:0 "AHSI"
  IRQ_communism_party_long:0 "Al-Hizb al-Shiuly al-Iraqiy"
  IRQ_democratic_party:0 "IDC"
- IRQ_democratic_party_long:0 "Iraq Democratic Coaliation"
+ IRQ_democratic_party_long:0 "Iraq Democratic Coalition"
+ IRQ_conservatism_party:0 "IDC"
+ IRQ_conservatism_party_long:0 "Iraq Democratic Coalition"
  IRQ_fascism_party:0 "NBP"
  IRQ_fascism_party_long:0 "National Brotherhood Party"
