JOR focus loc, fixes and immigration gfx

--- a/localisation/merJOR_focus_l_english.yml
+++ b/localisation/merJOR_focus_l_english.yml
@@ -2,11 +2,11 @@
  merJOR_Search_For_Oil_Deposits:0 "Search For Oil Deposits"
  merJOR_Search_For_Oil_Deposits_desc:0 "Search For Oil Deposits"
  merJOR_Bureaucracy:0 "Bureaucracy"
- merJOR_Bureaucracy_desc:0 "Bureaucracy"
+ merJOR_Bureaucracy_desc:0 "Bureaucracy will help us structure and organize our largely-disorganized country."
  merJOR_Recognize_Peel_Commission_Plan:0 "Recognize Peel Commission Plan"
- merJOR_Recognize_Peel_Commission_Plan_desc:0 "Recognize Peel Commission Plan"
+ merJOR_Recognize_Peel_Commission_Plan_desc:0 "Our Allies in Britain have come up with a plan for stabilizing Palestine, and would like us to recognize it."
  merJOR_Protest_Balfour_Declaration:0 "Protest Balfour Declaration"
- merJOR_Protest_Balfour_Declaration_desc:0 "Protest Balfour Declaration"
+ merJOR_Protest_Balfour_Declaration_desc:0 "The Balfour Declaration, which stipulates that the land of Palestine will be allocated for a future Jewish State is unjust and doesn't take into account the local Arab population!"
  merJOR_Declare_Neutrality:0 "Declare Neutrality"
  merJOR_Declare_Neutrality_desc:0 "Declare Neutrality"
  merJOR_Build_Schools:0 "Build Schools"
@@ -44,9 +44,9 @@
  merJOR_Motorize_Arab_Legion:0 "Motorize Arab Legion"
  merJOR_Motorize_Arab_Legion_desc:0 "Motorize Arab Legion"
  merJOR_Protest_Peel_Commission_Plan:0 "Protest Peel Commission Plan"
- merJOR_Protest_Peel_Commission_Plan_desc:0 "Protest Peel Commission Plan"
+ merJOR_Protest_Peel_Commission_Plan_desc:0 "Our Masters in Britain have come up with a plan for what they think would stabilize Palestine, but without heeding the complaints of the local Arab population. We cannot allow them to pursue this plan!"
  merJOR_Expel_British_Administration:0 "Expel British Administration"
- merJOR_Expel_British_Administration_desc:0 "Expel British Administration"
+ merJOR_Expel_British_Administration_desc:0 "The British have occupied our country for far too long, but now they are at peril, so it is our time to break away from them and pursue our own interests, no matter how dangerous that may be. Now is the time for action! NOTE: This will likely make Britain declare war on us. We better have enough allies for such a war."
  merJOR_Call_Upon_Arab_Leaders:0 "Call Upon Arab Leaders"
  merJOR_Call_Upon_Arab_Leaders_desc:0 "Call Upon Arab Leaders"
  merJOR_Close_Mosul-Haifa_Pipeline:0 "Close Mosul-Haifa Pipeline"
