more BMP nerfing

--- a/localisation/BMP_focus_l_english.yml
+++ b/localisation/BMP_focus_l_english.yml
@@ -73,3 +73,5 @@
  BMP_encourage_palestinian_enterprise_desc:0 "With a small amount of government assistance, the economy in Palestine has the potential to grow."
  BMP_establish_military_industry:0 "Establish Military Industry"
  BMP_establish_military_industry_desc:0 "With all of the Mandate’s industrial expansion, we should subsidize our fledgling arms industry."
+ BMP_British_Officer_Training:0 "British Officer Training"
+ BMP_British_Officer_Training_desc:0 "Invite British officers to train and reform our command"
