--- a/localisation/BMP_ideas_l_english.yml
+++ b/localisation/BMP_ideas_l_english.yml
@@ -29,6 +29,8 @@ BMP_arab_revolt:0 "Arab Revolt"
 BMP_arab_revolt_desc:0 "The tension in the Mandate has reached such a level that outright revolts are commonplace. Both Arabs and Jews have organized and formed armed militias. Under these circumstances, we will have difficulty managing our internal affairs, and fighting a war will be virtually impossible."
 BMP_encourage_refugee_smuggling:0 "Encourage Refugee Smuggling"
 BMP_encourage_refugee_smuggling_desc:0 "In spite of strict quotas, more and more Jews flood into the Mandate. Countless Jewish-run organizations have been working to encourage this. Some may even be working with Zionist sympathizers from within the Mandate government."
+BMP_British_Rule:0 "British Rule"
+BMP_British_Rule_desc:0 "The United Kingdom governs us from across the seas, limiting our freedoms and our voice"
 #ISR Advisors
 ISR_generic_fascist_demagogue:0 "Abba Ahimeir"
 ISR_generic_democratic_reformer:0 "David Ben-Gurion"
@@ -61,4 +63,4 @@ BMP_arab_general_strikes_desc:0 "Following our refusal to respond to Arab dissat
 BMP_peel_commission:0 "Peel Commission"
 BMP_peel_commission_desc:0 "The British have sent Lord Peel to head a commission investigating the cause of the troubles within the Mandate. Luckily, the chaos of the revolts and the General Strike seem to have subsided during the investigation. The commission is expected to publish its report in April."
 BMP_Riots:0 "Riots"
-BMP_Riots-desc:0 "the nation is almost in a state of outright revolt, some sembalance of order must be restored at once!"
+BMP_Riots_desc:0 "the nation is almost in a state of outright revolt, some sembalance of order must be restored at once!"
