localization for events and focuses

--- a/localisation/BMP_events_l_english.yml
+++ b/localisation/BMP_events_l_english.yml
@@ -94,6 +94,12 @@
  mandate.15.t:0 "End of the Arab Revolt"
  mandate.15.d:0 "The last of the revolting militias have been destroyed, and with them the chaos of the Arab Revolt. Jewish militias now play an increasingly prominent role in the defense of the Mandate, and the Palestine Police Force has learned many new tricks from the fighting."
  mandate.15.a:0 "One less problem to worry about."
+ mandate.16.t:0 "Fire started in arms factory"
+ mandate.16.d:0 "Rioters have started a fire in a local arms factory, the damage is extensive and will take time to repair"
+ mandate.17.t:0 "Looters raid construction site"
+ mandate.17.d:0 "Looters have stolen much of our machinery for local construction and repair, it will take time to replace the lost goods"
+ mandate.18.t:0 "Bridge destroyed"
+ mandate.18.d:0 "Rioters have destroyed a Bridge causing chaos for local supply"
  bmpisrael.1.t:0 "Formation of the Israeli Defense Force"
  bmpisrael.1.d:0 "With the creation of our new nation, an army must also be created with it. Organizations such as the Haganah have long dreamed of defending Israel from foreign threats, and it has become the core of the new Israeli Defense Force. Local militias have also joined the IDF’s ranks. This new defense force will be vital in the struggle against our many enemies."
  bmpisrael.1.a:0 "We welcome them!"
