more election bug fixing

--- a/localisation/BMP_events_l_english.yml
+++ b/localisation/BMP_events_l_english.yml
@@ -100,6 +100,7 @@
  mandate.17.d:0 "Looters have stolen much of our machinery for local construction and repair, it will take time to replace the lost goods"
  mandate.18.t:0 "Bridge destroyed"
  mandate.18.d:0 "Rioters have destroyed a Bridge causing chaos for local supply"
+ mandate.19.desc:0 "Finally the day has come, let us cast our votes to see what the future holds"
  bmpisrael.1.t:0 "Formation of the Israeli Defense Force"
  bmpisrael.1.d:0 "With the creation of our new nation, an army must also be created with it. Organizations such as the Haganah have long dreamed of defending Israel from foreign threats, and it has become the core of the new Israeli Defense Force. Local militias have also joined the IDF’s ranks. This new defense force will be vital in the struggle against our many enemies."
  bmpisrael.1.a:0 "We welcome them!"
