--- a/localisation/BMP_focus_l_english.yml
+++ b/localisation/BMP_focus_l_english.yml
@@ -82,4 +82,4 @@
  BMP_Underground_Government:0 "Form an Underground Government"
  BMP_Underground_Government_desc:0 "We must organise our political systems to be ready to rule in place of Britain"
  BMP_Call_Elections:0 "Call for an Election"
- BMP_Call_Elections_desc:0 "Too long have we heard of the benefits of Democracy without the vote ourselves, today this will change"
+ BMP_Call_Elections_desc:0 "Too long have we heard of the benefits of Democracy without the vote ourselves, In 30 days this country will head to the polls and let the peoples voice be heard"
