--- a/localisation/BMP_ideas_l_english.yml
+++ b/localisation/BMP_ideas_l_english.yml
@@ -24,7 +24,7 @@ BMP_fortify_the_mandate_desc:0 "To prepare for the eventuality of war, we have a
 BMP_jewish_immigration:0 "Jewish Immigration"
 BMP_jewish_immigration_desc:0 "The Mandate, each year, accepts a quota of Jews from around the world to settle the land. They mainly come from Europe. Regardless of their origins, the native Arabs are displeased by their settling."
 BMP_limited_jewish_immigration:0 "Limited Jewish Immigration"
-BMP_limited_jewish_immigration_desc:0 "Following a change in policy, we have reduced the amount of Jews allowed into the Mandate each year."
+BMP_limited_jewish_immigration_desc:0 "Following a change in policy, we have reduced the amount of Jews allowed into the Mandate each year. This may anger some Jews at least until we find a common enemy"
 BMP_arab_revolt:0 "Arab Revolt"
 BMP_arab_revolt_desc:0 "The tension in the Mandate has reached such a level that outright revolts are commonplace. Both Arabs and Jews have organized and formed armed militias. Under these circumstances, we will have difficulty managing our internal affairs, and fighting a war will be virtually impossible."
 BMP_encourage_refugee_smuggling:0 "Encourage Refugee Smuggling"
