--- a/localisation/merJOR_focus_l_english.yml
+++ b/localisation/merJOR_focus_l_english.yml
@@ -65,3 +65,27 @@
  merJOR_Invite_German_Advisors_desc:0 "Invite German Advisors"
  merJOR_Arab_League:0 "Arab League"
  merJOR_Arab_League_desc:0 "Arab League"
+ merJOR_Road:0 "Roads to the Capital"
+ merJOR_Road_desc:0 "Access to the Capital is poor, we should expand our road network in the region"
+ merJOR_construction:0 "Construction in the Capital"
+ merJOR_construction_desc:0 "Encouraging the civilain economy in our capital will bring great rewards"
+ merJOR_Industry:0 "Industry modernisation"
+ merJOR_Industry_desc:0 "Our industry is well behind the modern world, we must invest in new and improved methods"
+ merJOR_fort_capital:0 "Defend the capital"
+ merJOR_fort_capital:0 "With tension in the world rising we must be ready to defend our seat of power"
+ merJOR_forts:0 "Fortification techniques"
+ merJOR_forts_desc:0 "In the past we could rely on the hostile terrian to defend our borders, but recent advances in warfare mean we must build to protect our borders"
+ merJOR_Elec_Fort:0 "Electrical Defenses"
+ merJOR_Elec_Fort_desc:0 "Recent breakthroughs in radio and RADAR will lead the way in our defensive strategies"
+ merJOR_Listen:0 "Detection Focus"
+ merJOR_Listen_desc:0 "The Key to a good defence is knowing what our opponents are doing, we will actively listen on the airwaves"
+ merJOR_Hide:0 "Scambling Techniques"
+ merJOR_Hide_desc:0 "Safety is found when you can not be found"
+ merJOR_Walls:0 "Defensive constructions"
+ merJOR_Walls_desc:0 "We will build fortifications and armories to defend our land"
+ merJOR_Walls_ground:0 "Ground Defences"
+ merJOR_Walls_ground_desc:0 "Its boots on the ground, entrenced and ready that provide the best defence"
+ merJOR_Walls_Air:0 "Air Defences"
+ merJOR_Walls_Air_desc:0 "We can not hope to defend our skies with our small airforce, instead we will install defenses on the ground"
+ merJOR_Arming:0 "Arm the nation"
+ merJOR_Arming_desc:0 "It is time to expand our military industry"
