--- a/localisation/BMP_decisions_l_english.yml
+++ b/localisation/BMP_decisions_l_english.yml
@@ -18,3 +18,9 @@
   BMP_hunt_Riots_Israel:0 "hunt down the rioters in Israel"
   Arab_riot_aid:0 "Aid our Arab brethern in the riots"
   Arab_riot_aid_desc:0 "Too long have our brethern suffered under British rule, we shall lend our support and bring down the Mandate"
+  BMP_Irgun_raids:0 "Suspected Irgun activity"
+  BMP_Police_Patrol:0 "Strengthen Police Patrols"
+  BMP_Police_Patrol_desc:0 "There has been some underground activity since the signing of the white papers, we may need extra police to handle any trouble"
+  Eng_Stable_Mandate:0 "stablise the Mandate"
+  Eng_Stable_Mandate:0 "The situation in Palestine is out of control, we must restore order"
+  
