--- a/localisation/IRQ_focus_l_english.yml
+++ b/localisation/IRQ_focus_l_english.yml
@@ -53,8 +53,8 @@
  IRQ_purge_desc:0 "All those who support and sympathize with the British imperialists are traitors to the homeland, must be hunted down and purged of our nation"
  IRQ_oil:0 "Nationalize the IPC"
  IRQ_oil_desc:0 "With the nationalization of the Iraqi Petroleum Company we will ultimately own our reserves of natural oil"
- IRQ_arab_nationalism:0 "Nationalist Propaganda"
- IRQ_arab_nationalism_desc:0 "Exalting our nation's achievements to the mass media will be of great help in our cause"
+ IRQ_IRQ_nationalism:0 "Nationalist Propaganda"
+ IRQ_IRQ_nationalism_desc:0 "Exalting our nation's achievements to the mass media will be of great help in our cause"
  IRQ_coup:0 "Operation Griffin"
  IRQ_coup_desc:0 "The time has come for an end to it all we need to act now"
  IRQ_infrastructure:0 "Mossul-Baghdad Railway"
@@ -76,4 +76,85 @@
  IRQ_military_advance:0 "Military Schools"
  IRQ_military_advance_desc:0 "With the creation of military schools, we will have our young minds committed to creating new technologies that will be of great benefit to us."
  IRQ_university:0 "Baghdad University"
- IRQ_university_desc:0 "Baghdad will be the first city in the Arab world to have a University at the height of the West"
+ IRQ_university_desc:0 "Baghdad will be the first city in the IRQ world to have a University at the height of the West"
+ IRQ_fort_capital:0 "Defend the capital"
+ IRQ_fort_capital:0 "With tension in the world rising we must be ready to defend Baghdad from any attacks"
+ IRQ_forts:0 "Fortification techniques"
+ IRQ_forts_desc:0 "In the past we could rely on the hostile terrian to defend our borders, but recent advances in warfare mean we must build to protect our borders"
+ IRQ_Walls:0 "Defensive constructions"
+ IRQ_Walls_desc:0 "We will build fortifications and armories to defend our land"
+ IRQ_Walls_ground:0 "Ground Defences"
+ IRQ_Walls_ground_desc:0 "Its boots on the ground, entrenced and ready that provide the best defence"
+ IRQ_Walls_Air:0 "Air Defences"
+ IRQ_Walls_Air_desc:0 "We can not hope to defend our skies with our small airforce, instead we will install defenses on the ground"
+ IRQ_Sea_Trade:0 "Khor Al Zubair Port"
+ IRQ_Sea_Trade_desc:0 "The port in Basra is of vital importance to our economy"
+ IRQ_Trade_Fleet:0 "trade fleet"
+ IRQ_Trade_Fleet_desc:0 "Construct a trade fleet"
+ IRQ_convert_fleet:0 "Convert the merchant fleet"
+ IRQ_convert_fleet_desc:0 "Our coast is defenceless without a navy, we will use the parts of merchant vessels to construct a destroyer"
+ IRQ_navy_tt:0 "3 patrol boats are commissioned in our port"
+ IRQ_Shipbuilder:0 "Shipbuilding"
+ IRQ_Shipbuilder_desc:0 "With our larger coastline we can now effectively build a naval force"
+ IRQ_Shipbuilder_tt:0 "A Coastal state that is not Al Basra"
+ IRQ_army_sent:0 "Shia Crushed"
+ IRQ_send_army:0 "Crush the rebels"
+ IRQ_send_army_desc:0 "The Shia tribes continue to be a thorn in our side, we must act quickly"
+ IRQ_Shia_deal:0 "Negotiate with the tribes"
+ IRQ_Shia_deal_desc:0 "We have been progressively taking power away from the Shia, we will ensure they have a seat in our government"
+ IRQ_Shia_Friend:0 "Friend of the Shia"
+ IRQ_Shia_Friend_desc:0 "Having kept our word to include the Shia in government we have prevented further unrest"
+ IRQ_Assyrian_friend:0 "Friend of the Assyrians"
+ IRQ_Assyrian_friend_desc:0 "It is time to reach out to other Assyrian communities across our borders"
+ IRQ_Consult_Shia:0 "Consult Shia Clerics"
+ IRQ_Consult_Shia_desc:0 "We should consult with Shi'ite Clerics to ensure the best outcomes for thier tribes"
+ IRQ_build_assyria:0 "Rebuild Assyrian villages"
+ IRQ_build_assyria_desc:0 "Much work needs to be done to rebuild what was destroyed"
+ IRQ_Search_For_Oil_Deposits:0 "Search For Oil Deposits"
+ IRQ_Search_For_Oil_Deposits_desc:0 "Search For Oil Deposits"
+ IRQ_Bureaucracy:0 "Bureaucracy"
+ IRQ_Bureaucracy_desc:0 "Bureaucracy will help us structure and organize our largely-disorganized country."
+ IRQ_Build_Schools:0 "Build Schools"
+ IRQ_Build_Schools_desc:0 "Build Schools"
+ IRQ_Build_More_Schools:0 "Build More Schools"
+ IRQ_Build_More_Schools_desc:0 "Build More Schools"
+ IRQ_Research_Funding:0 "Research Funding"
+ IRQ_Research_Funding_desc:0 "Research Funding"
+ IRQ_Revise_Bedouin_Control_Law:0 "Revise nomadic laws"
+ IRQ_Revise_Bedouin_Control_Law_desc:0 "The nomadic people of this land have too much freedom, our rule of law must be extended"
+ IRQ_Integrate_Nomads:0 "Integrate Nomads"
+ IRQ_Integrate_Nomads_desc:0 "Integrate Nomads"
+ IRQ_Subsidize_Farmers:0 "Subsidize Farmers"
+ IRQ_Subsidize_Farmers_desc:0 "Subsidize Farmers"
+ IRQ_Welfare:0 "Welfare"
+ IRQ_Welfare_desc:0 "Welfare"
+ IRQ_Healthcare:0 "Healthcare"
+ IRQ_Healthcare_desc:0 "Healthcare"
+ IRQ_Agriculture:0 "Agriculture"
+ IRQ_Agriculture_desc:0 "Devoloping farming techniques will see more of the nomadic tribes settling in our towns and villages"
+ IRQ_Develop_Oil_Industry:0 "Develop Oil Industry"
+ IRQ_Develop_Oil_Industry_desc:0 "Develop Oil Industry"
+ IRQ_Trade:0 "Oil Exports"
+ IRQ_Trade_desc:0 "We can use some of the profits from recent oil sales to help stablise our ecconomy"
+ IRQ_Petroleum_Company:0 "Expand our Petroleum Companies"
+ IRQ_Petroleum_Company_desc:0 "Expand our Petroleum Companies"
+ IRQ_Mining_Operations:0 "Mining Operations"
+ IRQ_Mining_Operations_desc:0 "Mining Operations"
+ IRQ_Trade_More:0 "International Trade"
+ IRQ_Trade_More_desc:0 "Trade is vital to the health of our nation"
+ IRQ_government:0 "Government reforms"
+ IRQ_government_desc:0 "Reform the government"
+ IRQ_Industry:0 "Industry modernisation"
+ IRQ_Industry_desc:0 "Our industry is well behind the modern world, we must invest in new and improved methods"
+ IRQ_Claim:0 "Claim Kuwait"
+ IRQ_Claim_desc:0 "Kuwait has always been a part of our land"
+ IRQ_British_oil:0 "Export more oil to the UK"
+ IRQ_British_research:0 "Allied Research"
+ IRQ_British_aid:0 "British Aid"
+ IRQ_British_train:0 "British Officer Training"
+ IRQ_Ita_aid:0 "Italian Aircraft"
+ IRQ_Ger_aid:0 "German Guns"
+ IRQ_Prepare_coup:0 "Prepare for a military coup"
+ IRQ_seize_airfields:0 "sieze the airfields"
+ 
+ 
