--- a/localisation/SYR_focus_l_english.yml
+++ b/localisation/SYR_focus_l_english.yml
@@ -1,4 +1,4 @@
-l_english:
+﻿l_english:
  SYR_constitution:0 "Strengthen the Constitution"
  SYR_constitution_desc:0 "Reinforcing our constitution will guarantee us more autonomy as a sovereign state"
  SYR_struggle:0 "Struggle for independence"
