--- a/localisation/merJOR_focus_l_english.yml
+++ b/localisation/merJOR_focus_l_english.yml
@@ -47,8 +47,8 @@
  merJOR_Protest_Peel_Commission_Plan_desc:0 "Our Masters in Britain have come up with a plan for what they think would stabilize Palestine, but without heeding the complaints of the local Arab population. We cannot allow them to pursue this plan!"
  merJOR_Expel_British_Administration:0 "Expel British Administration"
  merJOR_Expel_British_Administration_desc:0 "The British have occupied our country for far too long, but now they are at peril, so it is our time to break away from them and pursue our own interests, no matter how dangerous that may be. Now is the time for action! NOTE: This will likely make Britain declare war on us. We better have enough allies for such a war."
- merJOR_Call_Upon_Arab_Leaders:0 "Call Upon Arab Leaders"
- merJOR_Call_Upon_Arab_Leaders_desc:0 "Call Upon Arab Leaders"
+ merJOR_Call_Upon_Arab_Leaders:0 "Independance"
+ merJOR_Call_Upon_Arab_Leaders_desc:0 "We must work towards our own independance"
  merJOR_Close_Mosul-Haifa_Pipeline:0 "Close Mosul-Haifa Pipeline"
  merJOR_Close_Mosul-Haifa_Pipeline_desc:0 "Close Mosul-Haifa Pipeline"
  merJOR_Support_Germany:0 "Support Germany"
@@ -63,8 +63,8 @@
  merJOR_Declare_Fascist_State_desc:0 "Declare Fascist State"
  merJOR_Invite_German_Advisors:0 "Invite German Advisors"
  merJOR_Invite_German_Advisors_desc:0 "Invite German Advisors"
- merJOR_Arab_League:0 "Arab League"
- merJOR_Arab_League_desc:0 "Arab League"
+ merJOR_Arab_League:0 "Arab State"
+ merJOR_Arab_League_desc:0 "Form our own Arab State"
  merJOR_Road:0 "Roads to the Capital"
  merJOR_Road_desc:0 "Access to the Capital is poor, we should expand our road network in the region"
  merJOR_construction:0 "Construction in the Capital"
