--- a/localisation/IRQ_events_l_english.yml
+++ b/localisation/IRQ_events_l_english.yml
@@ -1,11 +1,10 @@
 ﻿l_english:
-  iraq.1.t:0 "Iraqi-Anglo Treaty "
-  iraq.1.d:0 "The [Root.GetName], [From.GetLeader] and Iraq have contacted us to establish a military technology agreement that will benefit our two nations mutually. The main proposal is the creation of new air doctrines and aircraft..."
-  iraq.1.a:0 "We can take advantage of this..."
-  iraq.1.b:0 "We will not give our secrets to these people!"
-  iraq.2.t:0 "British Accept Iraq-Anglo Treaty"
-  iraq.2.d:0 "Our negotiations with the [From.GetName] have been successful. An agreement has been reached where our nations will aid each other in the development of new aircraft units, with a possible extension to other research areas in the future."
-  iraq.2.a:0 "This treaty will be a stepping stone to the future."
+  iraq.1.t:0 "Send in the Army to crush the Shia "
+  iraq.1.d:0 "Shia tribes continue to rebel, it is time to show them our full force"
+  iraq.1.a:0 "Show no mercy"
+  iraq.2.t:0 "The battle is won!"
+  iraq.2.d:0 "Although we suffered some loses our men have returned victorious and the Shia tribes are in no position to trouble us again"
+  iraq.2.a:0 "Huzah!"
   iraq.3.t:0 "British Reject Iraq-Anglo Treaty"
   iraq.3.d:0 "The [From.GetName] has rejected our suggestion for a treaty aimed at advancing aircraft unit research in both countries, presumably fearing our superior weapons would be turned against them."
   iraq.3.a:0 "They have hardly diminished the risks of it now."
