--- a/localisation/Arab_ideas_l_english.yml
+++ b/localisation/Arab_ideas_l_english.yml
@@ -67,3 +67,5 @@
  conservatism_influence:0 "Conservative Ideals"
  liberalism_influence:0 "Liberal Ideals"
  socialism_influence:0 "Socialist Ideals"
+ Arab_Meddle:0 "Outside support for the Arab Rebels"
+ Arab_Meddle_desc:0 "We have noticed an increase in foreign fighters disturbing the peace"
