fixed events/Arabevents.txt and localisation/Arab_events_l_english.yml

--- a/localisation/Arab_events_l_english.yml
+++ b/localisation/Arab_events_l_english.yml
@@ -3,10 +3,10 @@
  Arab.1.t:0 "Tribal Movements"
  Arab.1.desc:0 "A large number of nomadic tribes have recently been on the move, and have distabilised our political position"
  Arab.1.a:0 "Ok"
- SAU.1:0 "Al Madinah al Manawarah"
- SAU.1.t:0 "Al Madinah al Manawarah"
- SAU.1.desc:0 "Al Madina was founded as a weekly publication under the name of Al Madinah al Manawarah (Madinah the Radiant in English) in the 1930s. Specifically, the paper was launched as a weekly newspaper by the Hafiz brothers, namely Othman and Ali Hafiz, on 8 April 1937"
- SAU.2:0 "Dhahran Founded"
- SAU.2.t:0 "Dhahran Founded"
- SAU.2.desc:0 "Dhahran (Arabic الظهران aẓ-Ẓahrān) is a city located in Eastern Province, Saudi Arabia. It is a major administrative center for the Saudi oil industry. Together with the nearby cities of Dammam and Khobar, Dhahran forms part of the Dammam Metropolitan Area, which is commonly known as greater Dammam and has an estimated population of 4,140,000 as of 2012."
+ Arab.2:0 "Al Madinah al Manawarah"
+ Arab.2.t:0 "Al Madinah al Manawarah"
+ Arab.2.desc:0 "Al Madina was founded as a weekly publication under the name of Al Madinah al Manawarah (Madinah the Radiant in English) in the 1930s. Specifically, the paper was launched as a weekly newspaper by the Hafiz brothers, namely Othman and Ali Hafiz, on 8 April 1937"
+ Arab.3:0 "Dhahran Founded"
+ Arab.3.t:0 "Dhahran Founded"
+ Arab.3.desc:0 "Dhahran (Arabic الظهران aẓ-Ẓahrān) is a city located in Eastern Province, Saudi Arabia. It is a major administrative center for the Saudi oil industry. Together with the nearby cities of Dammam and Khobar, Dhahran forms part of the Dammam Metropolitan Area, which is commonly known as greater Dammam and has an estimated population of 4,140,000 as of 2012."
  
