tooltip and balance changes **** need playtesters ****

--- a/localisation/BMP_decisions_l_english.yml
+++ b/localisation/BMP_decisions_l_english.yml
@@ -3,19 +3,19 @@
   BMP_hunt_Riots_tt:0 "Rioting has gotten out of hand, its time to take a more direct approach \n"
   BMP_Riots_Remove_West:0 "Pacifies rioters in the westbank"
   BMP_pacify_Riots_West:0 "Pacify the rioters in the westbank"
-  BMP_British_Aid_Westbank:0 "Ask for Brittish aid in the Westbank"
-  BMP_British_Aid_Westbank_desc:0 "the situation in the westbank is out of hand, we must call in the Brittish"
-  BMP_Riots_Remove_Gaza:0 "Pacifies rioters in the Gaza region"
-  BMP_pacify_Riots_Gaza:0 "Pacify the rioters in the Gaza region"
-  BMP_British_Aid_Gaza:0 "Ask for Brittish aid in Gaza"
-  BMP_British_Aid_Gaza_desc:0 "the situation in the Gaza region is out of hand, we must call in the Brittish"
-  BMP_Riots_Remove_Israel:0 "Pacifies rioters in Israel"
-  BMP_pacify_Riots_Israel:0 "Pacify the rioters in Israel"
-  BMP_British_Aid_Israel:0 "Ask for Brittish aid in Israel"
-  BMP_British_Aid_Israel_desc:0 "the situation in Israel is out of hand, we must call in the Brittish"
+  BMP_British_Aid_westbank:0 "Ask for Brittish aid in the Westbank"
+  BMP_British_Aid_westbank_desc:0 "the situation in the westbank is out of hand, we must call in the Brittish"
+  BMP_Riots_Remove_gaza:0 "Pacifies rioters in the Gaza region"
+  BMP_pacify_Riots_gaza:0 "Pacify the rioters in the Gaza region"
+  BMP_British_Aid_gaza:0 "Ask for Brittish aid in Gaza"
+  BMP_British_Aid_gaza_desc:0 "the situation in the Gaza region is out of hand, we must call in the Brittish"
+  BMP_Riots_Remove_israel:0 "Pacifies rioters in Palestine"
+  BMP_pacify_Riots_israel:0 "Pacify the rioters in Palestine"
+  BMP_British_Aid_israel:0 "Ask for Brittish aid in Palestine"
+  BMP_British_Aid_israel_desc:0 "the situation in Palestine is out of hand, we must call in the Brittish"
   BMP_hunt_Riots_West:0 "hunt down the rioters in the Westbank"
-  BMP_hunt_Riots_Gaza:0 "hunt down the rioters in Gaza"
-  BMP_hunt_Riots_Israel:0 "hunt down the rioters in Israel"
+  BMP_hunt_Riots_gaza:0 "hunt down the rioters in Gaza"
+  BMP_hunt_Riots_israel:0 "hunt down the rioters in Palestine"
   Arab_riot_aid:0 "Aid our Arab brethern in the riots"
   Arab_riot_aid_desc:0 "Too long have our brethern suffered under British rule, we shall lend our support and bring down the Mandate"
   BMP_Irgun_raids:0 "Suspected Irgun activity"
@@ -23,4 +23,10 @@
   BMP_Police_Patrol_desc:0 "There has been some underground activity since the signing of the white papers, we may need extra police to handle any trouble"
   Eng_Stable_Mandate:0 "stablise the Mandate"
   Eng_Stable_Mandate:0 "The situation in Palestine is out of control, we must restore order"
-  
+  BMP_Riots_raids:0 "Riot activity"
+  BMP_maintain_westbank:0 "Maintain control in the Westbank"
+  BMP_maintain_gaza:0 "Maintain control in the Gaza"
+  BMP_maintain_israel:0 "Maintain control in Palestine"
+  BMP_Riots_westbank:0 "Riot activity in the Westbank"
+  BMP_Riots_gaza:0 "Riot activity in Gaza"
+  BMP_Riots_israel:0 "Riot activity in Palestine"
