Forced Anglo-Iraq war on historical dates when played as AI

--- a/localisation/IRQ_events_l_english.yml
+++ b/localisation/IRQ_events_l_english.yml
@@ -20,3 +20,8 @@
   iraq.7.t:0 "Bakr Sidqi Assasination"
   iraq.7.d:0 "n August 1937, while en route to Turkey, Sidqi was assassinated in the garden of one of the air force bases in Mosul along with Mohammad 'Ali Jawad, the commanding officer of the Royal Iraqi Air Force. Both Sidqi and Jawad were sent as part of a military mission by the Iraqi government in response to an invitation from the Turkish government. Sidqi had stopped in Mosul on August 11 on the way to Turkey to spend the afternoon with Jawed when a soldier named Muhammad 'Ali Talla'fari opened fire, instantly killing both men. The bodies of both men were flown to Baghdad the following day and buried with full military honors."
   iraq.7.a:0 "Rest in peace"
+  iraq.8.t:0 "Golden Square coup"
+  iraq.8.d:0 "Facists seize power in Iraq"
+  iraq.9.t:0 "Anglo–Iraqi War"
+  iraq.9.d:0 "England declares war"
+  
