--- a/localisation/BMP_countries_l_english.yml
+++ b/localisation/BMP_countries_l_english.yml
@@ -1,30 +1,50 @@
 ﻿l_english:
- BMP_fascism:0 "Rightful Palestinian Mandate"
- BMP_fascism_DEF:0 "The Rightful Palestinian Mandate"
- BMP_conservatism:0 "Republican Mandate of Palestine"
- BMP_conservatism_DEF:0 "The Republican Mandate of Palestine"
- BMP_socialism:0 "Republican Mandate of Palestine"
- BMP_socialism_DEF:0 "The Republican Mandate of Palestine"
- BMP_liberalism:0 "Republican Mandate of Palestine"
- BMP_liberalism_DEF:0 "The Republican Mandate of Palestine"
- BMP_democratic:0 "Republican Mandate of Palestine"
- BMP_democratic_DEF:0 "The Republican Mandate of Palestine"
+ BMP_fascism:0 "Palestinian State"
+ BMP_fascism_DEF:0 "The State of Palestine"
+ BMP_conservatism:0 "Republic of Palestine"
+ BMP_conservatism_DEF:0 "The Republic of Palestine"
+ BMP_socialism:0 "Republic of Palestine"
+ BMP_socialism_DEF:0 "The Republic of Palestine"
+ BMP_liberalism:0 "Republic of Palestine"
+ BMP_liberalism_DEF:0 "The Republic of Palestine"
  BMP_neutrality:0 "Mandatory Palestine"
  BMP_neutrality_DEF:0 "The Mandate of Palestine"
- BMP_communism:0 "People's Mandate of Palestine"
- BMP_communism_DEF:0 "The People's Mandate of Palestine" 
- BMP_fascism_ADJ:0 "Mandatory Palestinian"
- BMP_conservatism_ADJ:0 "Mandatory Palestinian"
- BMP_socialism_ADJ:0 "Mandatory Palestinian"
- BMP_liberalism_ADJ:0 "Mandatory Palestinian"
- BMP_democratic_ADJ:0 "Mandatory Palestinian"
+ BMP_communism:0 "People's Republic of Palestine"
+ BMP_communism_DEF:0 "The People's Republic of Palestine" 
+ BMP_fascism_ADJ:0 "Palestinian"
+ BMP_conservatism_ADJ:0 "Palestinian"
+ BMP_socialism_ADJ:0 "Palestinian"
+ BMP_liberalism_ADJ:0 "Palestinian"
  BMP_neutrality_ADJ:0 "Mandatory Palestinian" 
- BMP_communism_ADJ:0 "Mandatory Palestinian" 
+ BMP_communism_ADJ:0 "Palestinian" 
  
  BMP_monarchism:0 "Emirate of Palestine"
  ##### maybe Emirate of Palestine if the monarch is an arab? #######
- BMP_monarchism_DEF:0 "The Kingdom of Palestine"
- BMP_monarchism_ADJ:0 "Mandatory Palestinian"
+ BMP_monarchism_DEF:0 "The Emirate of Palestine"
+ BMP_monarchism_ADJ:0 "Palestinian"
+ 
+ 
+ BMP_UK_fascism:0 "Mandatory Palestine"
+ BMP_UK_fascism_DEF:0 "The Mandate of Palestine"
+ BMP_UK_conservatism:0 "Mandatory Palestine"
+ BMP_UK_conservatism_DEF:0 "The Mandate of Palestine"
+ BMP_UK_socialism:0 "Mandatory Palestine"
+ BMP_UK_socialism_DEF:0 "The Mandate of Palestine"
+ BMP_UK_liberalism:0 "Mandatory Palestine"
+ BMP_UK_liberalism_DEF:0 "The Mandate of Palestine"
+ BMP_UK_monarchism:0 "Mandatory Palestine"
+ BMP_UK_monarchism_DEF:0 "The Mandate of Palestine"
+ BMP_UK_neutrality:0 "Mandatory Palestine"
+ BMP_UK_neutrality_DEF:0 "The Mandate of Palestine"
+ BMP_UK_communism:0 "Mandatory Palestine"
+ BMP_UK_communism_DEF:0 "The Mandate of Palestine" 
+ BMP_UK_fascism_ADJ:0 "Mandatory Palestinian"
+ BMP_UK_conservatism_ADJ:0 "Mandatory Palestinian"
+ BMP_UK_socialism_ADJ:0 "Mandatory Palestinian"
+ BMP_UK_liberalism_ADJ:0 "Mandatory Palestinian"
+ BMP_UK_monarchism_ADJ:0 "Mandatory Palestinian"
+ BMP_UK_neutrality_ADJ:0 "Mandatory Palestinian" 
+ BMP_UK_communism_ADJ:0 "Mandatory Palestinian" 
  
  JOR_monarchism:0 "Emirate of Transjordan"
  JOR_monarchism_DEF:0 "The Emirate of Transjordan"
